include/flowi/string/string.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdbool.h>
#include <stdint.h>
#include <flowi/core/string.h>
#include <flowi/arena/arena.h>

#ifdef __cplusplus
extern "C" {
#endif

// Outcome of a `string_parse_*` call: Success, or why the parse failed.
typedef enum FlStringParseStatus {
    // Parse succeeded; the result's value is set.
    FlStringParseStatus_Success = 0,
    // The string holds characters the requested format does not accept.
    FlStringParseStatus_InvalidFormat = 1,
    // The value is too large for the target type.
    FlStringParseStatus_Overflow = 2,
    // The value is too small for the target type (signed integers only).
    FlStringParseStatus_Underflow = 3,
    // The string is empty or only whitespace.
    FlStringParseStatus_Empty = 4,
    // Hex parsing expected a leading "0x" / "0X" prefix.
    FlStringParseStatus_InvalidHexPrefix = 5,
} FlStringParseStatus;

// Result of parsing an unsigned 64-bit integer: the value plus the parse status.
typedef struct FlStringParseResultU64 {
    uint64_t value;
    FlStringParseStatus status;
} FlStringParseResultU64;

// Result of parsing an unsigned 32-bit integer: the value plus the parse status.
typedef struct FlStringParseResultU32 {
    uint32_t value;
    FlStringParseStatus status;
} FlStringParseResultU32;

// Result of parsing a signed 64-bit integer: the value plus the parse status.
typedef struct FlStringParseResultI64 {
    int64_t value;
    FlStringParseStatus status;
} FlStringParseResultI64;

// Result of parsing a signed 32-bit integer: the value plus the parse status.
typedef struct FlStringParseResultI32 {
    int32_t value;
    FlStringParseStatus status;
} FlStringParseResultI32;

// Result of parsing a 64-bit float: the value plus the parse status.
typedef struct FlStringParseResultF64 {
    double value;
    FlStringParseStatus status;
} FlStringParseResultF64;

// Result of parsing a 32-bit float: the value plus the parse status.
typedef struct FlStringParseResultF32 {
    float value;
    FlStringParseStatus status;
} FlStringParseResultF32;

// A string being concatenated in place at the end of an arena: arena is the arena it grows in and
// start_pos the byte offset its bytes start at. A POD value type crossed by value through the public
// ABI - every `sb_*` function takes one and returns the updated one, so the builder is never held by pointer.
typedef struct FlStringBuilder {
    FlArena* arena;
    uint64_t start_pos;
} FlStringBuilder;

// The `fl_string_*` / `fl_sb_*` / `fl_sprintf_*` plugin service API - flowi core's FlString
// manipulation, arena string builder and arena-allocating sprintf, exported as plain C symbols. FlString
// itself, its inline helpers and the S() literal macros come from `<flowi/core/string.h>`. Plugins link
// the shared library and call these symbols directly.
// Direct API - hand-written bodies.
// Copy str into arena as a null-terminated C string (for an external C API that needs one).
FL_API const char* string_to_cstr(FlArena* arena, FlString str);
// Copy str into a caller-owned dest buffer of buffer_len bytes, null-terminated (truncating).
FL_API void string_to_cstr_buffer(char* dest, uint64_t buffer_len, FlString str);
// Whether str starts with needle.
FL_API bool string_begins_with(FlString str, FlString needle);
// Whether str ends with needle.
FL_API bool string_ends_with(FlString str, FlString needle);
// Whether a and b hold the same bytes.
FL_API bool string_equals(FlString a, FlString b);
// Whether a and b hold the same bytes, ignoring ASCII case.
FL_API bool string_equals_nocase(FlString a, FlString b);
// Byte-compare at most max_len bytes of a and b (memcmp ordering).
FL_API int32_t string_compare_n(FlString a, FlString b, uint64_t max_len);
// Compare a and b in natural order (embedded digit runs compare numerically).
FL_API int32_t string_compare_natural(FlString a, FlString b);
// Concatenate s0 and s1 into a fresh string allocated from arena.
FL_API FlString string_concat(FlArena* arena, FlString s0, FlString s1);
// Copy str into arena.
FL_API FlString string_copy(FlArena* arena, FlString str);
// Copy str onto the heap (malloc); release it with string_free.
FL_API FlString string_copy_malloc(FlString str);
// Copy str into arena, lowercasing ASCII characters.
FL_API FlString string_to_lower(FlArena* arena, FlString str);
// Free a string allocated by string_copy_malloc (a no-op for a static/arena one).
FL_API void string_free(FlString str);
// A view of length bytes of str starting at start (clamped to the end of str).
FL_API FlString string_substr(FlString str, uint64_t start, uint64_t length);
// Start building a string at the current end of arena.
FL_API FlStringBuilder sb_create(FlArena* arena);
// Append a null-terminated C string.
FL_API FlStringBuilder sb_append_cstr(FlStringBuilder sb, const char* str);
// Append an FlString.
FL_API FlStringBuilder sb_append_string(FlStringBuilder sb, FlString str);
// Append a single character.
FL_API FlStringBuilder sb_append_char(FlStringBuilder sb, char c);
// Append printf-formatted text (%S formats an FlString).
FL_API FlStringBuilder sb_appendf(FlStringBuilder sb, const char* format, ...);
// Discard everything appended so far, rewinding to the builder's start position.
FL_API FlStringBuilder sb_clear(FlStringBuilder sb);
// The built bytes as an FlString (no copy; they live in the builder's arena).
FL_API FlString sb_to_string(FlStringBuilder sb);
// The built bytes as a null-terminated C string in the builder's arena.
FL_API const char* sb_to_cstr(FlStringBuilder sb);
// Byte length of what has been appended so far.
FL_API uint64_t sb_length(FlStringBuilder sb);
// Parse a decimal unsigned 64-bit integer.
FL_API FlStringParseResultU64 string_parse_u64(FlString str);
// Parse a decimal signed 64-bit integer.
FL_API FlStringParseResultI64 string_parse_i64(FlString str);
// Parse a decimal unsigned 32-bit integer.
FL_API FlStringParseResultU32 string_parse_u32(FlString str);
// Parse a decimal signed 32-bit integer.
FL_API FlStringParseResultI32 string_parse_i32(FlString str);
// Parse a 64-bit float.
FL_API FlStringParseResultF64 string_parse_f64(FlString str);
// Parse a 32-bit float.
FL_API FlStringParseResultF32 string_parse_f32(FlString str);
// Parse a hexadecimal unsigned 64-bit integer (requires a "0x" / "0X" prefix).
FL_API FlStringParseResultU64 string_parse_hex_u64(FlString str);
// Parse a hexadecimal unsigned 32-bit integer (requires a "0x" / "0X" prefix).
FL_API FlStringParseResultU32 string_parse_hex_u32(FlString str);
// Parse an unsigned 64-bit integer, hex when "0x"-prefixed and decimal otherwise.
FL_API FlStringParseResultU64 string_parse_number_u64(FlString str);
// Parse an unsigned 32-bit integer, hex when "0x"-prefixed and decimal otherwise.
FL_API FlStringParseResultU32 string_parse_number_u32(FlString str);
// Index of the first c in str, or -1 if absent.
FL_API int64_t string_find_char(FlString str, char c);
// Index of the first needle in str, or -1 if absent.
FL_API int64_t string_find_substr(FlString str, FlString needle);
// Index of the first c in str at or after offset, or -1 if absent.
FL_API int64_t string_find_char_from(FlString str, char c, uint64_t offset);
// Whether str contains needle.
FL_API bool string_contains(FlString str, FlString needle);
// Whether str contains needle, ignoring ASCII case.
FL_API bool string_contains_nocase(FlString str, FlString needle);
// FNV-1a hash of the string's bytes.
FL_API uint64_t string_hash_fnv1a(FlString str);
// printf-format into a fresh string allocated from arena (%S formats an FlString, and the
// %v4f / %v4i / ... specifiers format SIMD vectors).
FL_API FlString sprintf_arena(FlArena* arena, const char* format, ...);


#ifdef __cplusplus
}
#endif