rust/flowi_core_sys/src/generated/string.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

/// Outcome of a `string_parse_*` call: Success, or why the parse failed.
#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum StringParseStatus {
    /// Parse succeeded; the result's value is set.
    Success = 0,
    /// The string holds characters the requested format does not accept.
    InvalidFormat = 1,
    /// The value is too large for the target type.
    Overflow = 2,
    /// The value is too small for the target type (signed integers only).
    Underflow = 3,
    /// The string is empty or only whitespace.
    Empty = 4,
    /// Hex parsing expected a leading "0x" / "0X" prefix.
    InvalidHexPrefix = 5,
}

const _: () = {
    assert!(core::mem::size_of::<StringParseStatus>() == 4, "StringParseStatus size drift");
    assert!(core::mem::align_of::<StringParseStatus>() == 4, "StringParseStatus align drift");
};

/// Result of parsing an unsigned 64-bit integer: the value plus the parse status.
#[repr(C)]
pub struct StringParseResultU64 {
    pub value: u64,
    pub status: crate::StringParseStatus,
}

const _: () = {
    assert!(core::mem::size_of::<StringParseResultU64>() == 16, "StringParseResultU64 size drift");
    assert!(core::mem::align_of::<StringParseResultU64>() == 8, "StringParseResultU64 align drift");
    assert!(core::mem::offset_of!(StringParseResultU64, value) == 0, "StringParseResultU64.value offset drift");
    assert!(core::mem::offset_of!(StringParseResultU64, status) == 8, "StringParseResultU64.status offset drift");
};

/// Result of parsing an unsigned 32-bit integer: the value plus the parse status.
#[repr(C)]
pub struct StringParseResultU32 {
    pub value: u32,
    pub status: crate::StringParseStatus,
}

const _: () = {
    assert!(core::mem::size_of::<StringParseResultU32>() == 8, "StringParseResultU32 size drift");
    assert!(core::mem::align_of::<StringParseResultU32>() == 4, "StringParseResultU32 align drift");
    assert!(core::mem::offset_of!(StringParseResultU32, value) == 0, "StringParseResultU32.value offset drift");
    assert!(core::mem::offset_of!(StringParseResultU32, status) == 4, "StringParseResultU32.status offset drift");
};

/// Result of parsing a signed 64-bit integer: the value plus the parse status.
#[repr(C)]
pub struct StringParseResultI64 {
    pub value: i64,
    pub status: crate::StringParseStatus,
}

const _: () = {
    assert!(core::mem::size_of::<StringParseResultI64>() == 16, "StringParseResultI64 size drift");
    assert!(core::mem::align_of::<StringParseResultI64>() == 8, "StringParseResultI64 align drift");
    assert!(core::mem::offset_of!(StringParseResultI64, value) == 0, "StringParseResultI64.value offset drift");
    assert!(core::mem::offset_of!(StringParseResultI64, status) == 8, "StringParseResultI64.status offset drift");
};

/// Result of parsing a signed 32-bit integer: the value plus the parse status.
#[repr(C)]
pub struct StringParseResultI32 {
    pub value: i32,
    pub status: crate::StringParseStatus,
}

const _: () = {
    assert!(core::mem::size_of::<StringParseResultI32>() == 8, "StringParseResultI32 size drift");
    assert!(core::mem::align_of::<StringParseResultI32>() == 4, "StringParseResultI32 align drift");
    assert!(core::mem::offset_of!(StringParseResultI32, value) == 0, "StringParseResultI32.value offset drift");
    assert!(core::mem::offset_of!(StringParseResultI32, status) == 4, "StringParseResultI32.status offset drift");
};

/// Result of parsing a 64-bit float: the value plus the parse status.
#[repr(C)]
pub struct StringParseResultF64 {
    pub value: f64,
    pub status: crate::StringParseStatus,
}

const _: () = {
    assert!(core::mem::size_of::<StringParseResultF64>() == 16, "StringParseResultF64 size drift");
    assert!(core::mem::align_of::<StringParseResultF64>() == 8, "StringParseResultF64 align drift");
    assert!(core::mem::offset_of!(StringParseResultF64, value) == 0, "StringParseResultF64.value offset drift");
    assert!(core::mem::offset_of!(StringParseResultF64, status) == 8, "StringParseResultF64.status offset drift");
};

/// Result of parsing a 32-bit float: the value plus the parse status.
#[repr(C)]
pub struct StringParseResultF32 {
    pub value: f32,
    pub status: crate::StringParseStatus,
}

const _: () = {
    assert!(core::mem::size_of::<StringParseResultF32>() == 8, "StringParseResultF32 size drift");
    assert!(core::mem::align_of::<StringParseResultF32>() == 4, "StringParseResultF32 align drift");
    assert!(core::mem::offset_of!(StringParseResultF32, value) == 0, "StringParseResultF32.value offset drift");
    assert!(core::mem::offset_of!(StringParseResultF32, status) == 4, "StringParseResultF32.status offset drift");
};

/// A string being concatenated in place at the end of an arena: arena is the arena it grows in and
/// start_pos the byte offset its bytes start at. A POD value type crossed by value through the public
/// ABI - every `sb_*` function takes one and returns the updated one, so the builder is never held by pointer.
#[repr(C)]
pub struct StringBuilder {
    pub arena: *mut crate::Arena,
    pub start_pos: u64,
}

const _: () = {
    assert!(core::mem::size_of::<StringBuilder>() == 16, "StringBuilder size drift");
    assert!(core::mem::align_of::<StringBuilder>() == 8, "StringBuilder align drift");
    assert!(core::mem::offset_of!(StringBuilder, arena) == 0, "StringBuilder.arena offset drift");
    assert!(core::mem::offset_of!(StringBuilder, start_pos) == 8, "StringBuilder.start_pos offset drift");
};

// The `fl_string_*` / `fl_sb_*` / `fl_sprintf_*` plugin service API - flowi core's FlString
// manipulation, arena string builder and arena-allocating sprintf, exported as plain C symbols. FlString
// itself, its inline helpers and the S() literal macros come from `<flowi/core/string.h>`. Plugins link
// the shared library and call these symbols directly.
extern "C" {
    /// Copy str into arena as a null-terminated C string (for an external C API that needs one).
    pub fn string_to_cstr(arena: *mut crate::Arena, str: crate::RawStr) -> *const core::ffi::c_char;
    /// Copy str into a caller-owned dest buffer of buffer_len bytes, null-terminated (truncating).
    pub fn string_to_cstr_buffer(dest: *mut core::ffi::c_char, buffer_len: u64, str: crate::RawStr);
    /// Whether str starts with needle.
    pub fn string_begins_with(str: crate::RawStr, needle: crate::RawStr) -> bool;
    /// Whether str ends with needle.
    pub fn string_ends_with(str: crate::RawStr, needle: crate::RawStr) -> bool;
    /// Whether a and b hold the same bytes.
    pub fn string_equals(a: crate::RawStr, b: crate::RawStr) -> bool;
    /// Whether a and b hold the same bytes, ignoring ASCII case.
    pub fn string_equals_nocase(a: crate::RawStr, b: crate::RawStr) -> bool;
    /// Byte-compare at most max_len bytes of a and b (memcmp ordering).
    pub fn string_compare_n(a: crate::RawStr, b: crate::RawStr, max_len: u64) -> i32;
    /// Compare a and b in natural order (embedded digit runs compare numerically).
    pub fn string_compare_natural(a: crate::RawStr, b: crate::RawStr) -> i32;
    /// Concatenate s0 and s1 into a fresh string allocated from arena.
    pub fn string_concat(arena: *mut crate::Arena, s0: crate::RawStr, s1: crate::RawStr) -> crate::RawStr;
    /// Copy str into arena.
    pub fn string_copy(arena: *mut crate::Arena, str: crate::RawStr) -> crate::RawStr;
    /// Copy str onto the heap (malloc); release it with string_free.
    pub fn string_copy_malloc(str: crate::RawStr) -> crate::RawStr;
    /// Copy str into arena, lowercasing ASCII characters.
    pub fn string_to_lower(arena: *mut crate::Arena, str: crate::RawStr) -> crate::RawStr;
    /// Free a string allocated by string_copy_malloc (a no-op for a static/arena one).
    pub fn string_free(str: crate::RawStr);
    /// A view of length bytes of str starting at start (clamped to the end of str).
    pub fn string_substr(str: crate::RawStr, start: u64, length: u64) -> crate::RawStr;
    /// Start building a string at the current end of arena.
    pub fn sb_create(arena: *mut crate::Arena) -> crate::StringBuilder;
    /// Append a null-terminated C string.
    pub fn sb_append_cstr(sb: crate::StringBuilder, str: *const core::ffi::c_char) -> crate::StringBuilder;
    /// Append an FlString.
    pub fn sb_append_string(sb: crate::StringBuilder, str: crate::RawStr) -> crate::StringBuilder;
    /// Append a single character.
    pub fn sb_append_char(sb: crate::StringBuilder, c: core::ffi::c_char) -> crate::StringBuilder;
    /// Discard everything appended so far, rewinding to the builder's start position.
    pub fn sb_clear(sb: crate::StringBuilder) -> crate::StringBuilder;
    /// The built bytes as an FlString (no copy; they live in the builder's arena).
    pub fn sb_to_string(sb: crate::StringBuilder) -> crate::RawStr;
    /// The built bytes as a null-terminated C string in the builder's arena.
    pub fn sb_to_cstr(sb: crate::StringBuilder) -> *const core::ffi::c_char;
    /// Byte length of what has been appended so far.
    pub fn sb_length(sb: crate::StringBuilder) -> u64;
    /// Parse a decimal unsigned 64-bit integer.
    pub fn string_parse_u64(str: crate::RawStr) -> crate::StringParseResultU64;
    /// Parse a decimal signed 64-bit integer.
    pub fn string_parse_i64(str: crate::RawStr) -> crate::StringParseResultI64;
    /// Parse a decimal unsigned 32-bit integer.
    pub fn string_parse_u32(str: crate::RawStr) -> crate::StringParseResultU32;
    /// Parse a decimal signed 32-bit integer.
    pub fn string_parse_i32(str: crate::RawStr) -> crate::StringParseResultI32;
    /// Parse a 64-bit float.
    pub fn string_parse_f64(str: crate::RawStr) -> crate::StringParseResultF64;
    /// Parse a 32-bit float.
    pub fn string_parse_f32(str: crate::RawStr) -> crate::StringParseResultF32;
    /// Parse a hexadecimal unsigned 64-bit integer (requires a "0x" / "0X" prefix).
    pub fn string_parse_hex_u64(str: crate::RawStr) -> crate::StringParseResultU64;
    /// Parse a hexadecimal unsigned 32-bit integer (requires a "0x" / "0X" prefix).
    pub fn string_parse_hex_u32(str: crate::RawStr) -> crate::StringParseResultU32;
    /// Parse an unsigned 64-bit integer, hex when "0x"-prefixed and decimal otherwise.
    pub fn string_parse_number_u64(str: crate::RawStr) -> crate::StringParseResultU64;
    /// Parse an unsigned 32-bit integer, hex when "0x"-prefixed and decimal otherwise.
    pub fn string_parse_number_u32(str: crate::RawStr) -> crate::StringParseResultU32;
    /// Index of the first c in str, or -1 if absent.
    pub fn string_find_char(str: crate::RawStr, c: core::ffi::c_char) -> i64;
    /// Index of the first needle in str, or -1 if absent.
    pub fn string_find_substr(str: crate::RawStr, needle: crate::RawStr) -> i64;
    /// Index of the first c in str at or after offset, or -1 if absent.
    pub fn string_find_char_from(str: crate::RawStr, c: core::ffi::c_char, offset: u64) -> i64;
    /// Whether str contains needle.
    pub fn string_contains(str: crate::RawStr, needle: crate::RawStr) -> bool;
    /// Whether str contains needle, ignoring ASCII case.
    pub fn string_contains_nocase(str: crate::RawStr, needle: crate::RawStr) -> bool;
    /// FNV-1a hash of the string's bytes.
    pub fn string_hash_fnv1a(str: crate::RawStr) -> u64;
}

